--- a/1st_assignment.Rmd
+++ b/1st_assignment.Rmd
@@ -1,25 +1,23 @@
 ---
-title: "第一次作业你的报告题目"
-CJKmainfont: Songti SC
-author: "your name"
-date: "`r Sys.Date()`"
+title: "武汉市链家房屋数据分析"
+author: "tracy.hu"
+date: "2024-10-31"
 output:
-  pdf_document:
-    latex_engine: xelatex
-  word_document:
-    toc: yes
   html_document:
-    code_folding: show
-    fig_caption: yes
-    fig_width: 10
-    highlight: tango
-    number_sections: yes
-    theme: cosmo
-    toc: yes
+    df_print: paged
+  word_document: default
+  pdf_document:
+    includes:
+      keep_tex: true
+    latex_engine: xelatex
+header-includes: \usepackage{ctex}
 ---
-```{r setup, include = FALSE,echo = FALSE}
-knitr::opts_chunk$set(echo = FALSE,error = FALSE, warning = FALSE, message = FALSE,
-                      out.width = "100%", split = FALSE, fig.align = "center")
+
+```{r start, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r}
 #load library
 library(tidyverse)
 library(kableExtra)
@@ -28,16 +26,10 @@ library(scales)
 library(plotly)
 library(patchwork)
 library(ggrepel)
+library(jiebaR)
+library(wordcloud2)
 ```
 
-# 你的主要发现
-
-1. 发现1
-
-1. 发现2
-  
-1. 发现3
-    
 
 # 数据介绍
 
@@ -53,8 +45,9 @@ library(ggrepel)
     
 ```{r}
 # 载入数据和预处理
-
-lj<- read_csv("/Users/jameschen/Documents/02_Teaching/12_quantitative_thinking_R/data/2023-09-12_cleaned.csv")
+filepath <- r"(C:/Users/huxio/Desktop/r_data/2023-09-12_cleaned.csv)"
+lj<- read_csv(filepath)
+view(lj)
 # EDA ---------------------------------------------------------------------
 
 ## 如下语句可以解决画图中的中文显示问题，当然你可以用showtext包来解决
@@ -88,67 +81,87 @@ summary(lj)
 
 可以看到：
 
-- 直观结论1
+- 直观结论1：武汉市房屋总价主要为100万-200万之间，单价主要为1-1.9万/平方，建筑面积在80-100平方左右，通常含有3个卧室，1-2个客厅。
 
-- 直观结论2
+- 直观结论2：武汉市房屋总价和平方单价都具有右偏特点，说明存在某些房屋的总价和单价异常高。
 
-- ...
 
 # 探索性分析
 
-## 变量1的数值描述与图形
+## 武汉市小区名称特点分析
 
 发现：
 
-- 发现1
+- 发现1：武汉市房屋名称多以4个字为主，第二为6个字，第三为5个字，2个字或11个字以上的极少。
 
-- 发现2
+- 发现2: 通过对房屋名称开展词云分析可知武汉市的小区名字中频繁出现：城、区、期、金地、万科、时代、福星、城和公馆等词汇。
 
-## 变量2的数值描述与图形
+1. 房屋名称字数分析
 
-发现：
+```{r}
+lj$name_count <- nchar(lj$property_name)
+lj$name_count <- as_factor(lj$name_count)
+```
 
-- 发现1
+```{r}
+ggplot(data=lj)+geom_bar(mapping=aes(x=name_count))
+```
 
-- 发现2
+2. 小区命名词云分析
+```{r}
+segment(lj$property_name,worker())
+freq(segment(lj$property_name,worker()))
+wordcloud2(freq(segment(lj$property_name,worker())))
+```
 
-## 变量...的数值描述与图形
-
-发现：
-
-- 发现1
-
-- 发现2
-
-## 探索问题1
-
-发现：
-
-- 发现1
-
-- 发现2
-
-## 探索问题2
+## 武汉市房屋朝向特点分析
 
 发现：
 
-- 发现1
+- 发现1:从direction1来看，武汉市房屋朝向以南为主
 
-- 发现2
+- 发现2:从direction2来看，武汉市房屋朝向以北为主
 
-## 探索问题3
+1. direction1朝向分析
+
+```{r}
+ggplot(data=lj)+geom_bar(mapping=aes(x=directions1))
+```
+2. direction2朝向分析
+
+```{r}
+ggplot(data=lj)+geom_bar(mapping=aes(x=directions2))
+```
+
+## 武汉市房屋装修类型分析
 
 发现：
+- 发现1：武汉市二手房装修类型以精修为主，第二为简装，第三为毛胚。
+- 发现2：不同的装修类型都有板楼、塔楼、板塔结合这3种建筑风格，平方的建筑风格非常少见。
 
-- 发现1
+```{r}
+ggplot(data=lj)+geom_bar(mapping=aes(x=decoration,fill=property_style))
+```
 
-- 发现2
+## 探索房屋面积与总价之间的联系
 
----
+发现：不同类型装修模式的房屋都表现出面积越大总价越高的特点
+
+```{r}
+ggplot(data=lj) + 
+  geom_point(mapping=aes(x=building_area, y=price_ttl,color=decoration)
+             ,alpha=0.8)
+```
 
 # 发现总结
 
-用1-3段话总结你的发现。
+- 武汉市小区名称特点来看：武汉市房屋名称多为4-6个字，其中4个字最多，名称中频繁出现城、区、期、金地、万科、时代、福星、城和公馆等词汇。
+
+- 武汉市房屋朝向特点来看：武汉市房屋朝向中direction1以朝南为主，direction2以朝北为主。
+
+- 武汉市房屋朝向特点来看：武汉市二手房装修类型以精修为主，其次简装，毛胚第三，不同的装修类型都有板楼、塔楼、板塔结合这3种建筑风格，平方的建筑风格非常少见。
+
+- 武汉市房屋面积与总价联系起来看：不同类型装修模式的房屋都表现出面积越大总价越高的特点。
 
 
-
+Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
